# FatalHaskell

./: .gitmodules  FatalHaskell.sln
FatalHaskell/FatalHaskell.ProjectTemplate/: FatalHaskell.ProjectTemplate.csproj  FatalHaskell.fhsproj  FatalHaskell.vstemplate  LICENSE  Main.hs  project.cabal
FatalHaskell/FatalHaskell.ProjectType/: FatalHaskell.ProjectType.csproj  MyConfiguredProject.cs  MyUnconfiguredProject.cs  ProjectProperties.cs  VSPackage.resx  VsPackage.cs  app.config  packages.config  source.extension.vsixmanifest
FatalHaskell/FatalHaskell.ProjectType/BuildSystem/Control/: Builder.cs  IBuilder.cs  ILogger.cs  OutputPaneLogger.cs
FatalHaskell/FatalHaskell.ProjectType/BuildSystem/DeployedBuildSystem/: CustomProject.targets
FatalHaskell/FatalHaskell.ProjectType/Core/: Communication.cs  DictionaryExtension.cs  Error.cs  FEitherExtension.cs  FListExtension.cs  FOptionExtension.cs  FStringExtension.cs  ListMonad.cs  OptionExtension.cs  ProcessOutput.cs  ProjectTree.cs  Success.cs
FatalHaskell/FatalHaskell.ProjectType/Editor/AutoComplete/: FHCommandFilter.cs  FHTextViewCreationListener.cs  FRCompletionSource.cs  FRCompletionSourceProvider.cs
FatalHaskell/FatalHaskell.ProjectType/Editor/Completion/: FHCommandFilter.cs  (+4 more)
FatalHaskell/FatalHaskell.ProjectType/FHBuildSystem/: Builder.cs  IBuilder.cs  ILogger.cs  OutputPaneLogger.cs
FatalHaskell/FatalHaskell.ProjectType/Interaction/: FHCommandGroupHandler.cs
FatalHaskell/FatalHaskell.ProjectType/Properties/: AssemblyInfo.cs
FatalHaskell/FatalHaskell.ProjectType/RunSystem/: IRunner.cs  StackRunner.cs
(+20 files in other folders)
