name:                $safeprojectname$
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            homepage.com
license-file:        LICENSE
author:              $username$
maintainer:          example@example.com
copyright:           $year$ $username$
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable $safeprojectname$-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , $safeprojectname$
  default-language:    Haskell2010

test-suite $safeprojectname$-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , $safeprojectname$
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

